# plugin-marketplace

./: .gitignore  README.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.cursor/skills/: compile  critique  edit  explore-citations  navigate  setup
evals/budget-vs-actual/: README.md  generate_data.py
plugins/yorph-automate/: CLAUDE.md  README.md  TODO-caching.md  server.py
plugins/yorph-cc-convo-to-eval/: CLAUDE.md
plugins/yorph-data-analyst/: CLAUDE.md  README.md
plugins/yorph-eval-dueling/: README.md
plugins/yorph-research-writer/: README.md
plugins/yorph-semantic-layer-builder/: .mcp.json  CLAUDE.md  README.md
plugins/yorph-semantic-layer-builder/runtime/: pyproject.toml
plugins/yorph-semantic-layer-builder/runtime/agents/: __init__.py  business_rules.py  dag.yaml  glossary.py  grain_detector.py  orchestrator.py  quality_sentinel.py  schema_annotator.py  time_intelligence.py
plugins/yorph-semantic-layer-builder/runtime/documents/: processor.py
plugins/yorph-semantic-layer-builder/runtime/mcp_client/: adapters.py  client.py
plugins/yorph-semantic-layer-builder/runtime/profiler/: __init__.py  base.py  bigquery.py  bigquery_mcp.py  gcs.py  postgres_mcp.py  s3.py  snowflake_mcp.py  sqlserver.py  supabase_mcp.py
plugins/yorph-semantic-layer-builder/runtime/sampler/: cache.py
plugins/yorph-semantic-layer-builder/runtime/sandbox/: __init__.py
plugins/yorph-semantic-layer-builder/runtime/tests/: conftest.py  test_documents.py  test_flow.py  test_renderer.py
plugins/yorph-semantic-layer-builder/runtime/utils/: __init__.py  surface_conflict.py  validate_cardinality.py
plugins/yorph-taggy/: CLAUDE.md  EXAMPLES.md  README.md  SPEC.md  schema.sql  setup_db.py
yorph-cc-convo-to-demo/: CLAUDE.md
yorph-conversation-memory/: README.md  showcase.html
yorph-data-analysis-utils/: README.md
yorph-data-analyst/: README.md
yorph-demo-maker/: CLAUDE.md
yorph-research-writer/: CLAUDE.md  README.md  server.py
yorph-semantic-layer-assistant/: .mcp.json  CLAUDE.md
yorph-semantic-layer-builder/: .mcp.json  CLAUDE.md  CLAUDE.md.orig  README.md  launch.sh
(+281 files in other folders)
